fixing distribuidores button on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -542,7 +542,7 @@ body p {
 
 .menu ul {
 	list-style-type: none;
-	margin-left: 5%;
+	margin-left: 12%;
 	padding-left: 0px;
 }
 
